# neugird

./: .dockerignore  .gcloudignore  .gitignore  .npmrc  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
.claude/commands/: end.md  start.md
agent-runtime/: CONNECTORS.md  README.md  neugrid-eliza-plugin.mjs
agent-runtime/connectors/: hermes.config.yaml  openclaw.json
contracts/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
contracts/programs/grid_governance/: Cargo.toml
contracts/programs/grid_staking/: Cargo.toml
contracts/programs/grid_staking/src/: lib.rs
contracts/programs/mandate_wallet/: Cargo.toml
contracts/programs/mandate_wallet/src/: lib.rs
contracts/programs/market_amm/: Cargo.toml
contracts/programs/market_amm/src/: lib.rs
contracts/programs/milestone_vault/: Cargo.toml
contracts/programs/milestone_vault/src/: lib.rs
contracts/programs/perp_vault/: Cargo.toml
contracts/programs/perp_vault/src/: lib.rs
contracts/programs/revenue_splitter/: Cargo.toml
contracts/programs/revenue_splitter/src/: lib.rs
contracts/scripts/: amm-devnet-smoke.mjs  devnet-smoke.mjs  perp-devnet-smoke.mjs  staking-devnet-smoke.mjs
contracts/tests/: grid-governance.ts  grid-staking.ts  mandate-wallet.ts  market-amm.ts  milestone-vault.ts  perp-vault.ts  revenue-splitter.ts
db/: schema.sql
db/migrations/: 2026-07-02-tradex-tails.sql  2026-07-03-agreement-onchain.sql  2026-07-03-gridx-marketplace.sql  2026-07-03-proposal-onchain.sql  2026-07-03-referrals.sql  2026-07-03-relabel-raise-backed.sql  2026-07-03-talent-listing.sql  2026-07-08-agent-gateway-modes.sql  2026-07-08-agent-risk.sql  2026-07-08-disputes.sql  2026-07-08-pulse-reward-excluded.sql  2026-07-08-skills-market.sql  2026-07-08-starter-credit.sql  2026-07-09-dm-attachment.sql  2026-07-09-engine-hardening.sql  2026-07-09-humanity.sql  2026-07-10-dm-transfer.sql  2026-07-10-market-onchain.sql  2026-07-10-position-onchain.sql  2026-07-11-persistence-hardening.sql  2026-07-11-social-wire.sql  2026-07-12-backing-escrowed.sql  2026-07-13-venture-approvals.sql  2026-07-13-venture-revenue-sync.sql  2026-07-13-ventures.sql  2026-07-14-feed-grid-scope.sql  2026-07-16-venture-reports.sql  2026-07-18-studio-crew.sql  2026-07-18-studio.sql  2026-07-20-founder-allocation.sql  2026-07-20-job-build-link.sql  2026-07-20-revenue-share.sql
docs/: DEPLOY.md  DEVNET.md  DFINITY_PITCH.md  ECHO_STUDIO.md  ICP_INTEGRATION.md  NEUGRID_MASTER_SPEC.md  POH_GATE.md  ROADMAP.md  TRADEX_ROADMAP.md  TRADING_ENGINE_AUDIT.md
icp/: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
icp/assets-seed/: index.html
icp/scripts/: poc-devnet-transfer.mjs
icp/src/neugrid_cron/: Cargo.toml  neugrid_cron.did
icp/src/neugrid_signer/: Cargo.toml  neugrid_signer.did
infra/engine-runner/: neugrid-engine-runner.service  runner.mjs
mcp-server/: README.md  neugrid-jobs.mjs
public/: llms.txt  robots.txt
scratchpad/: README.md  backfill-trades.cjs  gov-adapter-test.ts  grid-claim-test.ts  integrity-test.ts  mandate-adapter-test.ts  perp-tails-test.ts  proofs-adapter-test.ts  reset-governance.cjs  restore-vault.cjs  sas-mint-test.ts  sdk-e2e.mjs  sdk-x402-e2e.mjs  splits-adapter-test.ts  test-agentmode.mjs  test-agents.cjs  test-attestations.cjs  test-echo.cjs  test-external.mjs  test-governance.mjs  test-grid-content.mjs  test-grid-gov.mjs  test-hardening.cjs  test-mcp.mjs  test-messaging.mjs  test-perps.mjs  test-protocol-gov-exec.mjs  test-protocol-gov.mjs  test-slash.mjs  test-subgrid-econ.mjs  test-tokenize-gridx.mjs  test-trust.cjs  vault-adapter-test.ts  x402-cdp-roundtrip.ts  x402-devnet-setup-classic.ts  x402-devnet-setup.ts  x402-e2e-prod.mjs  x402-roundtrip-test.ts
scratchpad/libjs/: id.js  store-postgres.js  store.js  types.js
scratchpad/libjs/chain/: index.js  solana.js
scratchpad/libjs/modules/: agents.js  attestations.js  campaign.js  campaignx.js  echo.js  genesis.js  gridRegistry.js  gridx.js  index.js  jobs.js  markets.js  pulse.js  roles.js  users.js  x402.js
scripts/: engine-bench.ts  engine-update.sh  grid-mint-setup.mjs  keygen.mjs  sas-setup.mjs  x402-facilitator-check.mjs
sdk/: README.md  neugrid-agent.mjs
src/: instrumentation.ts  proxy.ts  qrcode.d.ts
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/app/about/: page.tsx
src/app/agents/: page.tsx
src/app/campaignx/: page.tsx
src/app/disputes/: page.tsx
src/app/echo/: page.tsx
src/app/genesis/: page.tsx
src/app/governance/: page.tsx
src/app/grids/: page.tsx
src/app/gridx/: page.tsx
src/app/home/: layout.tsx  page.tsx
src/app/jobs/: page.tsx
src/app/leaderboard/: page.tsx
src/app/markets/: page.tsx
src/app/me/: page.tsx
src/app/messages/: page.tsx
src/app/privacy/: page.tsx
src/app/profile/: page.tsx
src/app/rewards/: page.tsx
src/components/: HudBackground.tsx  Logo.tsx  MatrixRain.tsx  NeuGridMark.tsx
src/lib/: agentAuth.ts  auth.ts  cronTick.ts  id.ts  publicUrl.ts  session.ts  store-postgres.ts  store.ts  types.ts
(+280 files in other folders)
